[package]
name = "image_clustering"
version = "0.1.0"
authors = ["chrism <christophermoran@ucsb.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
rand = "0.7.2"
rand_pcg = "0.2.1"
plotlib = { git = "https://github.com/quietlychris/plotlib", branch = "master" }
