[package]
name = "image_clustering"
version = "0.1.0"
authors = ["chrism <christophermoran@ucsb.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
imageproc = "0.19.2"
rand = "0.7.2"
rscam = "0.5.5"
plotlib = { git = "https://github.com/quietlychris/plotlib", branch = "master" }
rayon = "^1.2"

[lib]
name = "image_clustering"
